     logging data into a saved game.
   * Small change to animator API - facing parameter replaced with target and required to be
     a space adjacent to the unit.
 * Performance:
   * Greatly speeded up switching between add-ons in the add-on manager (bug #25523)
 * User Interface:
   * Updated Attack Predictions dialog to GUI2.
   * Fixed file path being truncated on the wrong side in the File Browser.
 * WML Engine:
   * Add base_income key to [store_side]
   * Fix issues with alpha animations on hidden units (#14503)
   * Extensions to GUI2 Canvas ([drawing] tag in dialogs):
     * New [round_rectangle] shape - a rectangle plus corner_radius
     * [circle] shape can now be drawn filled; color key is now border_color
     * [image] has new resize_mode=tile_center
     * Canvas colors can now be expressed as formulas. The formula must return
       the color as a list of its components, eg "([r, g, b, a])"

Version 1.13.7:
 * AI:
   * Fix a performance regression in complex combat situations such as the
     "Oath of Allegiance" UMC campaign.
   * Fix some Micro AIs and AI helper functions not working correctly for AI
     sides under shroud
   * New function ai_helper.find_path_with_shroud()
 * Campaigns:
   * Eastern Invasion:
     * In 'Weldyn Besieged', redesigned the way in which revealing the
       identities of the liches works.
  * Descent Into Darkness:
     * Fixed certain units not having the 'guardian' special in 'Descent into
       Darkness'.
   * Heir to the Throne:
     * Fixed bug allowing the wrong person to receive the Sceptre of Fire.
     * Fixed inconsistencies in Li'sar's sprites and animations when she has the
       scepter.
     * New death animation for Asheviere.
   * Secrets of the Ancients:
     * New campaign added to mainline (Intermediate level, 21 scenarios).
   * The Hammer of Thursagan:
     * New sprites for Dwarvish Witness line.
   * Under the Burning Suns: