@@ -5,6 +5,9 @@ changelog: https://github.com/wesnoth/wesnoth/blob/master/changelog
 Version 1.13.7+dev:
  * Language and i18n:
    * Updated translations: British English, Lithuanian, Spanish.
+ * User Interface:
+   * Double-clicking an add-on now installs, updates, uninstalls or publishes it depending
+     on the situation.
 
 
 Version 1.13.7:
