@@ -17,6 +17,8 @@ Version 1.13.7+dev:
    * Greatly speeded up switching between add-ons in the add-on manager (bug #25523)
  * User Interface:
    * Updated Attack Predictions dialog to GUI2.
+   * Double-clicking an add-on now installs, updates, uninstalls or publishes it depending
+     on the situation.
    * Fixed file path being truncated on the wrong side in the File Browser.
  * WML Engine:
    * Add base_income key to [store_side]
